--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -144,10 +144,10 @@
             </objects>
             <point key="canvasLocation" x="137.32394366197184" y="106.875"/>
         </scene>
-        <!--View Controller-->
+        <!--About View Controller-->
         <scene sceneID="uQ4-Ro-Hzq">
             <objects>
-                <viewController modalTransitionStyle="flipHorizontal" id="mUj-ib-aRT" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="flipHorizontal" id="mUj-ib-aRT" customClass="AboutViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EMX-bG-JUh"/>
                         <viewControllerLayoutGuide type="bottom" id="AaC-Vr-u6L"/>
@@ -160,40 +160,36 @@
                                 <frame key="frameInset" width="568" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yZk-8v-shV">
-                                <frame key="frameInset" minX="265" minY="270" width="39" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yZk-8v-shV">
+                                <frame key="frameInset" minX="234" minY="263" width="100" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Close"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
+                                <size key="titleShadowOffset" width="0.0" height="1"/>
+                                <state key="normal" title="Close" backgroundImage="Button-Normal">
+                                    <color key="titleColor" red="0.37647058823529411" green="0.11764705882352941" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="highlighted" backgroundImage="Button-Highlighted">
+                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="close" destination="mUj-ib-aRT" eventType="touchUpInside" id="gyA-VQ-TwX"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="GfF-7Y-EVr">
-                                <frame key="frameInset" minX="20" minY="20" width="528" height="259"/>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ch9-Wi-DIp">
+                                <frame key="frameInset" minX="20" minY="20" width="528" height="235"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">*** Bull's Eye ***  
-Welcome to the awesome game of Bull's Eye where you can compete with friends by winning points by dragging the slider to the correct number. 
-
-Your goal it to place the slider as close to as possible to the target number. The closer you are, the more points you score. You can even get bonus points! 
-
-Scoring:
-     Your number subtracted from the target number (max 100pts)
-
-     Bonus:
-         +100 for hitting it exactly
-         +50 for being within 5
-          -20 for being more than 20 away</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="ch9-Wi-DIp" id="1U6-TH-tjJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kWO-JV-dQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.26760563380282" y="948.75"/>
+            <point key="canvasLocation" x="134.1549295774648" y="946.875"/>
         </scene>
     </scenes>
     <resources>
